Refactor AgentPathTest to support jdk26